tests/ui/dep-graph/dep-graph-trait-impl-two-traits.stderr
error: no path from `x::<impl Foo for char>` to `typeck`
  --> $DIR/dep-graph-trait-impl-two-traits.rs:32:5
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no path from `x::<impl Foo for char>` to `typeck`
  --> $DIR/dep-graph-trait-impl-two-traits.rs:41:5
   |
LL |     #[rustc_then_this_would_need(typeck)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

